--- a/C# Advanced/03. Methods/06. First larger than neighbours/06. First larger than neighbours.csproj
+++ b/C# Advanced/03. Methods/06. First larger than neighbours/06. First larger than neighbours.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F4B40761-B1CF-42BD-BB16-A9986EBF6858}</ProjectGuid>
+    <ProjectGuid>{8335C020-6A6A-4624-9A42-3D336E79F8A0}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03.English_digit</RootNamespace>
-    <AssemblyName>_03.English_digit</AssemblyName>
+    <RootNamespace>_06.First_larger_than_neighbours</RootNamespace>
+    <AssemblyName>_06.First_larger_than_neighbours</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03. English digit.cs" />
+    <Compile Include="06. First larger than neighbours.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
