--- a/C# Advanced/03. Methods/08. Number as array/08. Number as array.csproj
+++ b/C# Advanced/03. Methods/08. Number as array/08. Number as array.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E5C60062-42CF-43EF-97F0-9D304276CAB6}</ProjectGuid>
+    <ProjectGuid>{E42579E2-FE68-482D-AED8-D950D6844E37}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_07.Reverse_number</RootNamespace>
-    <AssemblyName>_07.Reverse_number</AssemblyName>
+    <RootNamespace>_08.Number_as_array</RootNamespace>
+    <AssemblyName>_08.Number_as_array</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="07. Reverse number.cs" />
+    <Compile Include="08. Number as array.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
