--- a/C# Advanced/01. Multidimensional-Arrays/5. Sort by string length/05. Sort by string length.csproj
+++ b/C# Advanced/01. Multidimensional-Arrays/5. Sort by string length/05. Sort by string length.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="05. Sort by string length.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
