--- a/C# Advanced/06. Workshop - Arrays, Methods and Objects/02. Bit Shift Matrix/02. Bit Shift Matrix.csproj
+++ b/C# Advanced/06. Workshop - Arrays, Methods and Objects/02. Bit Shift Matrix/02. Bit Shift Matrix.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24ACD3A5-4CA5-48AB-ACD2-53A3AA12CC71}</ProjectGuid>
+    <ProjectGuid>{EE6E9C58-5CC1-4658-9D19-5E76D2A04D96}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01.Messages</RootNamespace>
-    <AssemblyName>_01.Messages</AssemblyName>
+    <RootNamespace>_02.Bit_Shift_Matrix</RootNamespace>
+    <AssemblyName>_02.Bit_Shift_Matrix</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="01. Messages.cs" />
+    <Compile Include="02. Bit Shift Matrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
