--- a/C# Advanced/07. Strings-and-Text-Processing/11. Format number/11. Format number.csproj
+++ b/C# Advanced/07. Strings-and-Text-Processing/11. Format number/11. Format number.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{75908E65-E2FE-43D9-8D15-DC13D3AE4669}</ProjectGuid>
+    <ProjectGuid>{B3FA254D-30D0-492D-BCD5-14B055BC6F80}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_10.Unicode_characters</RootNamespace>
-    <AssemblyName>_10.Unicode_characters</AssemblyName>
+    <RootNamespace>_11.Format_number</RootNamespace>
+    <AssemblyName>_11.Format_number</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="10. Unicode characters.cs" />
+    <Compile Include="11. Format number.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
