--- a/C# Advanced/07. Strings-and-Text-Processing/12. Parse URL/12. Parse URL.csproj
+++ b/C# Advanced/07. Strings-and-Text-Processing/12. Parse URL/12. Parse URL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{75908E65-E2FE-43D9-8D15-DC13D3AE4669}</ProjectGuid>
+    <ProjectGuid>{3F511B75-A10E-4310-8F75-EEBA9BCE2BE1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_10.Unicode_characters</RootNamespace>
-    <AssemblyName>_10.Unicode_characters</AssemblyName>
+    <RootNamespace>_12.Parse_URL</RootNamespace>
+    <AssemblyName>_12.Parse_URL</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="10. Unicode characters.cs" />
+    <Compile Include="12. Parse URL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
