--- a/Object-Oriented-Programming/01. Defining-Classes-Part-1/GSM_ClassLibrary/GSM_ClassLibrary.csproj
+++ b/Object-Oriented-Programming/01. Defining-Classes-Part-1/GSM_ClassLibrary/GSM_ClassLibrary.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Battery.cs" />
+    <Compile Include="BatteryType.cs" />
     <Compile Include="Display.cs" />
     <Compile Include="GSM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
