--- a/Object-Oriented-Programming/02. Defining Classes - Part 2/Point3D_ClassLibrary/Point3D_ClassLibrary.csproj
+++ b/Object-Oriented-Programming/02. Defining Classes - Part 2/Point3D_ClassLibrary/Point3D_ClassLibrary.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalculateDistance.cs" />
+    <Compile Include="Path.cs" />
     <Compile Include="Point3D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
