Start work Task CSharp 02.05

--- a/Object-Oriented-Programming/02. Defining Classes - Part 2/Point3D_ClassLibrary/Point3D_ClassLibrary.csproj
+++ b/Object-Oriented-Programming/02. Defining Classes - Part 2/Point3D_ClassLibrary/Point3D_ClassLibrary.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalculateDistance.cs" />
+    <Compile Include="Generic class\GenericList.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="PathStorage.cs" />
     <Compile Include="Point3D.cs" />
