--- a/Object-Oriented-Programming/02. Defining Classes - Part 2/Point3D_ClassLibrary/Point3D_ClassLibrary.csproj
+++ b/Object-Oriented-Programming/02. Defining Classes - Part 2/Point3D_ClassLibrary/Point3D_ClassLibrary.csproj
@@ -47,6 +47,7 @@
     <Compile Include="PathStorage.cs" />
     <Compile Include="Point3D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VersionAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
