--- a/Object-Oriented-Programming/03. Extension-Delegates-Lambda-LINQ/09. Student groups/09 - 16. Student groups.csproj
+++ b/Object-Oriented-Programming/03. Extension-Delegates-Lambda-LINQ/09. Student groups/09 - 16. Student groups.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="09. Student groups.cs" />
+    <Compile Include="09 - 16. Student groups.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
