--- a/Object-Oriented-Programming/03. Extension-Delegates-Lambda-LINQ/ClassLibrary/ClassLibrary.csproj
+++ b/Object-Oriented-Programming/03. Extension-Delegates-Lambda-LINQ/ClassLibrary/ClassLibrary.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Group.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="StudentsExtensions.cs" />
