--- a/Object-Oriented-Programming/03. Extension-Delegates-Lambda-LINQ/17. Longest string/17. Longest string.csproj
+++ b/Object-Oriented-Programming/03. Extension-Delegates-Lambda-LINQ/17. Longest string/17. Longest string.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="17. Longest string.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
