--- a/Object-Oriented-Programming/04. OOP-Principles-Part-1/01. School classes/01. School classes.csproj
+++ b/Object-Oriented-Programming/04. OOP-Principles-Part-1/01. School classes/01. School classes.csproj
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Compile Include="01. School classes.cs" />
     <Compile Include="ClassOfStudents.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="School.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
