--- a/Object-Oriented-Programming/04. OOP-Principles-Part-1/01. School classes/01. School classes.csproj
+++ b/Object-Oriented-Programming/04. OOP-Principles-Part-1/01. School classes/01. School classes.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="01. School classes.cs" />
     <Compile Include="ClassOfStudents.cs" />
+    <Compile Include="IComment.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="School.cs" />
