--- a/Object-Oriented-Programming/04. OOP-Principles-Part-1/01. School classes/01. School classes.csproj
+++ b/Object-Oriented-Programming/04. OOP-Principles-Part-1/01. School classes/01. School classes.csproj
@@ -45,14 +45,18 @@
   <ItemGroup>
     <Compile Include="01. School classes.cs" />
     <Compile Include="ClassOfStudents.cs" />
+    <Compile Include="DisciplineList.cs" />
+    <Compile Include="Disciplines.cs" />
     <Compile Include="IComment.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="School.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="Teacher.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="SchoolClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
