Complete CSharp Task 05.02

--- a/Object-Oriented-Programming/05. OOP-Principles-Part-2/02. Bank accounts/02. Bank accounts.csproj
+++ b/Object-Oriented-Programming/05. OOP-Principles-Part-2/02. Bank accounts/02. Bank accounts.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Ideposit.cs" />
     <Compile Include="Individual.cs" />
     <Compile Include="IWithDraw.cs" />
+    <Compile Include="LoanAccount.cs" />
+    <Compile Include="MortgageAccount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
